test/should-succeed/syntax.imp
(check true)

(begin
  (assert {init x})
  (dummy-po)
  (x := 5)
  (assert {= x 5}))
