test/should-fail/proc-precondition.imp
(define (goo x)
  {> x x}
  true
  (skip))

(begin
  (assert true)
  (goo 5))
